plus/Protocol-HTTP/src/panda/protocol/http/Parser.cc

#line 1 "src/panda/protocol/http/Parser.rl"
#include "Parser.h"


#line 98 "src/panda/protocol/http/Parser.rl"


namespace panda { namespace protocol { namespace http {


#line 13 "src/panda/protocol/http/Parser.cc"
static const int http_parser_start = 1;
static const int http_parser_first_final = 190;
static const int http_parser_error = 0;

static const int http_parser_en_first_chunk = 64;
static const int http_parser_en_chunk = 74;
static const int http_parser_en_chunk_trailer = 86;
static const int http_parser_en_request = 92;
static const int http_parser_en_response = 1;


#line 103 "src/panda/protocol/http/Parser.rl"

#ifndef PARSER_CONSTANTS

#define ADD_DIGIT(dest) \
    dest *= 10;         \
    dest += *p - '0';
    
#define ADD_XDIGIT(dest) \
    dest *= 16;          \
    dest += (*p | 0x20) >= 'a' ? (*p - 'a' + 10) : (*p - '0');

#define SAVE(dest)                                              \
    if (mark != -1) dest = buffer.substr(mark, p - ps - mark);  \
    else {                                                      \
        dest = std::move(acc);                                  \
        dest.append(ps, p - ps);                                \
    }

size_t Parser::machine_exec (const string& buffer, size_t off) {
    const char* ps = buffer.data();
    const char* p  = ps + off;
    const char* pe = ps + buffer.size();
    
#line 49 "src/panda/protocol/http/Parser.cc"
	{
	if ( p == pe )
		goto _test_eof;
	if ( cs == 0 )
		goto _out;
_resume:
	switch ( cs ) {
case 1:
	if ( (*p) == 72 )
		goto tr0;
	goto tr1;
case 0:
	goto _out;
case 2:
	if ( (*p) == 84 )
		goto tr2;
	goto tr1;
case 3:
	if ( (*p) == 84 )
		goto tr3;
	goto tr1;
case 4:
	if ( (*p) == 80 )
		goto tr4;
	goto tr1;
case 5:
	if ( (*p) == 47 )
		goto tr5;
	goto tr1;
case 6:
	if ( (*p) == 49 )
		goto tr6;
	goto tr1;
case 7:
	if ( (*p) == 46 )
		goto tr7;
	goto tr1;
case 8:
	switch( (*p) ) {
		case 48: goto tr8;
		case 49: goto tr9;
	}
	goto tr1;
case 9:
	if ( (*p) == 32 )
		goto tr10;
	goto tr1;
case 10:
	if ( 49 <= (*p) && (*p) <= 57 )
		goto tr11;
	goto tr1;
case 11:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr12;
	goto tr1;
case 12:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr13;
	goto tr1;
case 13:
	if ( (*p) == 32 )
		goto tr14;
	goto tr1;
case 14:
	switch( (*p) ) {
		case 13: goto tr16;
		case 127: goto tr1;
	}
	if ( (*p) > 8 ) {
		if ( 10 <= (*p) && (*p) <= 31 )
			goto tr1;
	} else if ( (*p) >= 0 )
		goto tr1;
	goto tr15;
case 15:
	switch( (*p) ) {
		case 13: goto tr18;
		case 127: goto tr1;
	}
	if ( (*p) > 8 ) {
		if ( 10 <= (*p) && (*p) <= 31 )
			goto tr1;
	} else if ( (*p) >= 0 )
		goto tr1;
	goto tr17;
case 16:
	if ( (*p) == 10 )
		goto tr19;
	goto tr1;
case 17:
	switch( (*p) ) {
		case 13: goto tr20;
		case 33: goto tr21;
		case 67: goto tr22;
		case 84: goto tr23;
		case 99: goto tr22;
		case 116: goto tr23;
		case 124: goto tr21;
		case 126: goto tr21;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr21;
		} else if ( (*p) >= 35 )
			goto tr21;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr21;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr21;
		} else
			goto tr21;
	} else
		goto tr21;
	goto tr1;
case 18:
	if ( (*p) == 10 )
		goto tr24;
	goto tr1;
case 190:
	goto tr1;
case 19:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 20:
	switch( (*p) ) {
		case 9: goto tr28;
		case 13: goto tr29;
		case 32: goto tr28;
		case 127: goto tr1;
	}
	if ( 0 <= (*p) && (*p) <= 31 )
		goto tr1;
	goto tr27;
case 21:
	switch( (*p) ) {
		case 13: goto tr31;
		case 127: goto tr1;
	}
	if ( (*p) > 8 ) {
		if ( 10 <= (*p) && (*p) <= 31 )
			goto tr1;
	} else if ( (*p) >= 0 )
		goto tr1;
	goto tr30;
case 22:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 79: goto tr32;
		case 111: goto tr32;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 23:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 78: goto tr33;
		case 110: goto tr33;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 24:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 84: goto tr34;
		case 116: goto tr34;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 25:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 69: goto tr35;
		case 101: goto tr35;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 26:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 78: goto tr36;
		case 110: goto tr36;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 27:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 84: goto tr37;
		case 116: goto tr37;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 28:
	switch( (*p) ) {
		case 33: goto tr25;
		case 45: goto tr38;
		case 46: goto tr25;
		case 58: goto tr26;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 48 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else if ( (*p) >= 65 )
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 29:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 76: goto tr39;
		case 108: goto tr39;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 30:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 69: goto tr40;
		case 101: goto tr40;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 31:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 78: goto tr41;
		case 110: goto tr41;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 32:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 71: goto tr42;
		case 103: goto tr42;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 33:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 84: goto tr43;
		case 116: goto tr43;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 34:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 72: goto tr44;
		case 104: goto tr44;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 35:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr45;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 36:
	switch( (*p) ) {
		case 9: goto tr46;
		case 13: goto tr29;
		case 32: goto tr46;
		case 127: goto tr1;
	}
	if ( (*p) > 31 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr47;
	} else if ( (*p) >= 0 )
		goto tr1;
	goto tr27;
case 37:
	switch( (*p) ) {
		case 13: goto tr31;
		case 127: goto tr1;
	}
	if ( (*p) < 10 ) {
		if ( 0 <= (*p) && (*p) <= 8 )
			goto tr1;
	} else if ( (*p) > 31 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto tr48;
	} else
		goto tr1;
	goto tr30;
case 38:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 82: goto tr49;
		case 114: goto tr49;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 39:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 65: goto tr50;
		case 97: goto tr50;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 66 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 40:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 78: goto tr51;
		case 110: goto tr51;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 41:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 83: goto tr52;
		case 115: goto tr52;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 42:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 70: goto tr53;
		case 102: goto tr53;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 43:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 69: goto tr54;
		case 101: goto tr54;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 44:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 82: goto tr55;
		case 114: goto tr55;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 45:
	switch( (*p) ) {
		case 33: goto tr25;
		case 45: goto tr56;
		case 46: goto tr25;
		case 58: goto tr26;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 48 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 57 ) {
		if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else if ( (*p) >= 65 )
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 46:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 69: goto tr57;
		case 101: goto tr57;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 47:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 78: goto tr58;
		case 110: goto tr58;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 48:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 67: goto tr59;
		case 99: goto tr59;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 49:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 79: goto tr60;
		case 111: goto tr60;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 50:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 68: goto tr61;
		case 100: goto tr61;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 51:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 73: goto tr62;
		case 105: goto tr62;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 52:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 78: goto tr63;
		case 110: goto tr63;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
			if ( 94 <= (*p) && (*p) <= 122 )
				goto tr25;
		} else
			goto tr25;
	} else
		goto tr25;
	goto tr1;
case 53:
	switch( (*p) ) {
		case 33: goto tr25;
		case 58: goto tr26;
		case 71: goto tr64;
		case 103: goto tr64;
		case 124: goto tr25;
		case 126: goto tr25;
	}
	if ( (*p) < 45 ) {
		if ( (*p) > 39 ) {
			if ( 42 <= (*p) && (*p) <= 43 )
				goto tr25;
		} else if ( (*p) >= 35 )
			goto tr25;
	} else if ( (*p) > 46 ) {
		if ( (*p) < 65 ) {
			if ( 48 <= (*p) && (*p) <= 57 )
				goto tr25;
		} else if ( (*p) > 90 ) {
